style.css
body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 14px;
}

* {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

.footer {
    position: fixed;
    right: 300px;
    height: 25px;
    bottom: 0;
    left: 0;
    background: #eee;
    box-shadow: 0 -2px 2px rgba(0, 0, 0, .5);
}

.left {
    right: 300px;
    position: fixed;
    overflow: hidden;
    top: 0;
    left: 0;
    overflow: auto;
    bottom: 25px;
}

.right {
    padding: 10px;
    position: fixed;
    right: 0;
    top: 0;
    width: 300px;
    height: 100%;
    border-left: 1px solid gray;
    overflow: auto;
}

.right select {
    display: inline-block;
    width: 100%;
    margin-bottom: 10px;
    margin-top: 5px;
}

.right input:not([type=checkbox]) {
    width: 100%;
    margin-top: 5px;
}

table {
    width: 100%;
    height: 100%;
    table-layout: fixed;
    position: absolute;
    top: 0;
    bottom: 0;
    border-collapse: collapse;
    min-height: 800px;
    min-width: 500px;
}

table tbody td {
    border-right: 1px solid #333;
    border-top: 1px solid #333;
}

table .time {
    width: 50px;
    background: #eee;
    text-align: center;
    font-weight: bold;
}

table thead tr {
    background: #eee;
    text-align: center;
    font-weight: bold;
    line-height: 1.5;
}

table .block {
    vertical-align: top;
    position: relative;
}

table .block>div:not(:last-child) {
    height: 25%;
    border-bottom: 1px dashed #ddd;
    width: 99%;
}

table .item {
    position: absolute;
    background: rgba(47, 130, 224, 0.4);
    z-index: 2;
    width: 99%;
    padding: 2px;
    overflow: hidden;
    font-size: 11px;
    border: 1px solid #000;
    cursor: pointer;
}

table .item.selected {
    background: rgba(47, 224, 82, 0.8);
    z-index: 1;
}

table .item.selected.hovering {
    background: rgba(222, 104, 73, 0.8);
    z-index: 3;
}

.selectedList {
    border: 1px solid #ccc;
    margin-top: 5px;
}

.selectedList div {
    background: rgba(47, 130, 224, .4);
    padding: 3px;
    margin: 3px;
    font-size: 11px;
    cursor: pointer;
}

.selectedList div.selected {
    background: rgba(47, 224, 82, .8);
}

.selectedList div.selected:hover {
    background: rgba(222, 104, 73, 0.8);
}

.footer .option {
    line-height: 17px;
    padding: 0 5px;
    background: #aaa;
    margin: 4px 5px;
    border-radius: 5px;
    display: inline-block;
    cursor: pointer;
    font-size: 11px;
}

.footer .option.selected {
    background: rgba(47, 224, 82, .8);
}

.footer .option.floatRight {
    float: right;
}

.hint {
    float: right;
    font-size: 11px;
}

